src/objects/IATA_ISO_State__c.object
<CustomObject>
	<fields>
        <fullName>Admin_Subdivision_Level__c</fullName>
        <label>Admin Subdivision Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adm1</fullName>
                </value>
                <value>
                    <fullName>Adm2</fullName>
                </value>
                <value>
                    <fullName>Adm3</fullName>
                </value>
                <value>
                    <fullName>Adm4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeonameAsciiName__c</fullName>
        <label>GeonameAsciiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeonameId__c</fullName>
        <externalId>true</externalId>
        <label>GeonameId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeonameName__c</fullName>
        <label>GeonameName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_ISO_Country__c</fullName>
        <label>IATA ISO Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>IATA ISO States</relationshipLabel>
        <relationshipName>IATA_ISO_States</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IEC_Valid_SAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IEC - true means to display in list of provinves for eCommerce because the ISO code matched with SAP</description>
        <label>Valid for Ecommerce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISO_CODE_STANDARD__c</fullName>
        <description>This code is used to fill the LRegISO field in the WAD file. If the field has the format e.g. &apos;FR20&apos; we send the value &apos;FR&apos; if the field has the format e.g. &apos;FR-95&apos; we send the value &apos;95&apos;.</description>
        <label>Downstream Code LRegISO</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Code__c</fullName>
        <externalId>true</externalId>
        <label>ISO Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informatica_Value__c</fullName>
        <label>Informatica Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Language__c</fullName>
        <description>Local Language</description>
        <inlineHelpText>Local Language</inlineHelpText>
        <label>Local Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_for_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid for Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_for_GDP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid for GDP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>numeric_code__c</fullName>
        <inlineHelpText>Used by GDP</inlineHelpText>
        <label>numeric code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>IATA ISO State</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>ISO_Code__c</columns>
        <columns>ISO_CODE_STANDARD__c</columns>
        <columns>Local_Language__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>numeric_code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ISO_States_in_AU_BR_CA_MX_US_VE</fullName>
        <columns>NAME</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>ISO_Code__c</columns>
        <columns>ISO_CODE_STANDARD__c</columns>
        <columns>numeric_code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IATA_ISO_Country__c</field>
            <operation>equals</operation>
            <value>Australia,Brazil,Canada,Mexico,Venezuela,United States</value>
        </filters>
        <label>ISO States in AU, BR, CA, MX, US, VE</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Valid_for_EBC</fullName>
        <columns>NAME</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>ISO_Code__c</columns>
        <columns>ISO_CODE_STANDARD__c</columns>
        <columns>Local_Language__c</columns>
        <columns>Valid_for_GDP__c</columns>
        <columns>numeric_code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Valid_for_GDP__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Valid for EBC/GDP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Valid_for_Ecommerce</fullName>
        <columns>NAME</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>ISO_Code__c</columns>
        <columns>ISO_CODE_STANDARD__c</columns>
        <columns>Local_Language__c</columns>
        <columns>IEC_Valid_SAP__c</columns>
        <columns>Valid_for_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IEC_Valid_SAP__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Valid for Ecommerce</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ZZ_Search_By_Country</fullName>
        <columns>NAME</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>ISO_Code__c</columns>
        <columns>ISO_CODE_STANDARD__c</columns>
        <columns>Local_Language__c</columns>
        <columns>Valid_for_GDP__c</columns>
        <columns>numeric_code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IATA_ISO_Country__c</field>
            <operation>equals</operation>
            <value>Venezuela</value>
        </filters>
        <label>ZZ - Search By Country</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ISO State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IATA ISO States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>